<resources>
    <string name="app_name">TaskTechstalwartsFoodApp</string>
    <string name="get_starteed">Get starteed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password1">FORGOT PASSWORD</string>
</resources>