<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.authentication.LoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProgressbar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:padding="0dp"
        android:visibility="gone"
        android:allowClickWhenDisabled="false"
        android:layout_gravity="center">
        <ProgressBar
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:visibility="visible"/>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/grey"
            android:layout_marginLeft="@dimen/_4sdp"
            />

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/black"
            android:textCursorDrawable="@color/black"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:text="@string/password"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/etPassLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/colorPrimary"
            android:foreground="?attr/selectableItemBackground"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            app:cardCornerRadius="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:foreground="?attr/selectableItemBackground"
            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="@dimen/_14sdp"
                android:fontFamily="@font/abeezee_regular"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:paddingVertical="@dimen/_15sdp"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</FrameLayout>