<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.authentication.ForgotPassActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProgressbar"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_gravity="center"
        android:padding="0dp"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:visibility="visible" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/left_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/abeezee_regular"
            android:text="@string/forgot_password1"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sdp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/email_address"
            android:textColor="@color/grey"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/etEmailReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHighlight="@color/grey"
            android:textCursorDrawable="@color/black"
            android:textSize="@dimen/_14sdp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"
            android:foreground="?attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/_30sdp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/abeezee_regular"
                android:paddingVertical="@dimen/_15sdp"
                android:text="Send OTP"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>